# pyvut

./: .gitignore  README.md  how-to-use.md  pyproject.toml
pyvut/: __init__.py  api.py  tracker_core.py
scripts/: multiprocess_tracker_demo.py  stream_poses.py  visualize_pygame.py
